# claude-cat-island

./: .gitignore  CLAUDE.md  README.md  index.html  install.sh  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
Casks/: claude-cat-monitor.rb
handoffs/: codex-research-notes.md  codex-support-build.md  codex-support-plan.md  codex-support-point.md  codex-support-review.md  codex-support-spec.md  codex-support-verify.md  smart-auto-approve-plan.md  smart-auto-approve-point.md  smart-auto-approve-spec.md
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: cat-bridge.py
src-tauri/src/: approval.rs  claude.rs  codex.rs  lib.rs  main.rs  provider.rs  rules.rs  settings.rs  socket.rs
src/approval/: ApprovalQueue.test.ts  ApprovalQueue.ts
src/components/: ApprovalPanel.tsx  CatLogo.tsx  ConfirmDialog.tsx  PermissionPanel.tsx  PixelCat.tsx  QuestionPanel.tsx  QuickReply.tsx  SessionDetail.tsx  SessionPanel.tsx  SkillDetail.tsx  SkillPanel.tsx  TokenPanel.tsx
src/utils/: pillLabel.test.ts  pillLabel.ts  sound.test.ts  sound.ts
