[package]
name = "claude-cat-monitor"
version = "0.1.0"
description = "Pixel cat dashboard for monitoring Claude Code sessions"
authors = ["Caresys"]
edition = "2021"

[lib]
name = "claude_cat_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tiny_http = "0.12"
arboard = "3"
png = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"
core-graphics = "0.24"
